# smartwheel

./: .cm.txt  .gitignore  README.md  pts2d_left.txt  sensor_integration_prompt.md
calib/: left.yaml  left_unrotated.yaml  right.yaml  right_unrotated.yaml
docs/: 3d_slam_livo_wheel_architecture.md  PRODUCT_ROADMAP.md  ROADMAP.md  autonomous_rviz_mapping.md  calibration_checklist.md  camera_mapping.yaml  capability_audit_2026-06-06.md  fast_livo2_r3live_integration.md  first_release_plan.md  goal.md  goalv2.md  left_lidar_lab_mapping_demo.md  rtabmap_3d_mapping.md  runtime_commands_3d_slam.md  rviz_first_mapping_mvp.md  ui_architecture.md  web_2d_user_map.md  xtm60_stability.md  常用命令.md
maps/: map_20260528_003125.yaml  map_versions.json
scripts/: autostart_smartwheel.sh  cam_probe.py  check_3d_mapping_runtime.sh  check_3d_slam_topics.sh  check_autonomous_mapping_status.sh  check_first_release_ui.sh  check_left_lidar_lab_mapping_status.sh  check_real_sensors.sh  check_rviz_mapping_left.sh  check_rviz_sensors_left.sh  check_topics.sh  hardware_shutdown.sh  identify_cameras.py  identify_cameras_v2.py  install_autostart.sh  jog_zlac8030d_motor.py  log_clicked_points.py  pick_image_points.py  poll_ultrasonic_4sensors.py  read_ultrasonic_rs485_mm.py  read_zlac8030_readonly.py  record_3d_slam_bag.sh  run_autonomous_rviz_mapping.sh  run_left_lidar_lab_mapping_demo.sh  run_native_gui.sh  run_real_sensors.sh  run_rviz_manual_mapping_left.sh  run_rviz_sensors.sh  run_web_user_map.sh  save_livo_map.sh  save_mapping_result.sh  save_rtabmap_3d_map.sh  setup_radar_network.sh  sniff_udp_flows.py  solve_cam_lidar_extrinsic.py  stop_autonomous_mapping.sh  test_zlac8030d_motor.py  xt_bindshim.c  xtm60_dualopen_probe.py  xtm60_udpport_probe.py  (+1 more)
src/wheelchair_3d_mapping/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_3d_mapping/config/: cloud_to_occupancy_grid.yaml  dual_lidar_fusion.yaml  livo_interface.yaml  rgb_colorizer.yaml  rtabmap_params.yaml  wheel_livo_consistency.yaml
src/wheelchair_3d_mapping/launch/: autonomous_rviz_mapping.launch.py  cloud_to_2d_map.launch.py  dual_lidar_fusion.launch.py  kiss_icp_mapping.launch.py  livo_3d_mapping.launch.py  livo_wheel_fusion.launch.py  rtabmap_3d_mapping.launch.py
src/wheelchair_3d_mapping/rviz/: 3d_mapping.rviz  autonomous_3d_mapping.rviz  left_lidar_lab_mapping.rviz
src/wheelchair_3d_mapping/test/: test_autonomous_mapping_launch.py  test_cloud_utils.py
src/wheelchair_3d_mapping/wheelchair_3d_mapping/: cloud_to_occupancy_grid_node.py  cloud_utils.py  dual_lidar_cloud_fusion_node.py  kiss_icp_mapping_node.py  rgb_cloud_colorizer_node.py  wheel_livo_consistency_monitor.py
src/wheelchair_base/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_base/test/: test_kinematics.py  test_zlac_shutdown.py
src/wheelchair_base/wheelchair_base/: kinematics.py  modbus_rtu.py  zlac8030_driver_node.py
src/wheelchair_bringup/: CMakeLists.txt  README.md  package.xml  rviz_panel_plugin.xml
src/wheelchair_bringup/config/: camera.yaml  camera_full.yaml  camera_roles.yaml  diagnostics.yaml  diagnostics_left_lidar_lab.yaml  empty_map.pgm  empty_map.yaml  h30_imu.yaml  nav2_autonomous_mapping_params.yaml  nav2_params.yaml  passability.yaml  pointcloud_to_scan.yaml  pointcloud_to_scan_left.yaml  pointcloud_to_scan_right.yaml  robot_localization_ekf.yaml  robot_localization_livo_wheel_ekf.yaml  safety_params.yaml  safety_params_mapping.yaml  scan_merger.yaml  scan_merger_left_only.yaml  sensor_layout.yaml  slam_toolbox_params.yaml  ultrasonic.yaml  ultrasonic_full.yaml  xtm60_left.yaml  xtm60_right.yaml  xtm60_sdk.yaml  zlac8030_base.yaml  zlac8030_base.yaml.bak.063444
src/wheelchair_bringup/include/wheelchair_bringup/: teleop_panel.hpp
src/wheelchair_bringup/launch/: base.launch.py  bringup_3d_slam.launch.py  demo_mock.launch.py  diagnostics.launch.py  full_system.launch.py  localization.launch.py  manual_mapping_left.launch.py  manual_teleop.launch.py  mapping.launch.py  navigation.launch.py  preflight_check.launch.py  record_bag.launch.py  replay_bag.launch.py  rviz_sensors_left.launch.py  sensors.launch.py
src/wheelchair_bringup/rviz/: manual_mapping_left.rviz  sensor_view.rviz  wheelchair_default.rviz
src/wheelchair_bringup/src/: teleop_panel.cpp  xt_bindshim.c
src/wheelchair_description/: CMakeLists.txt  README.md  package.xml
src/wheelchair_description/config/: static_transforms.yaml
src/wheelchair_description/launch/: display.launch.py
src/wheelchair_description/urdf/: wheelchair.urdf.xacro
src/wheelchair_diagnostics/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_diagnostics/test/: test_policy.py
src/wheelchair_diagnostics/wheelchair_diagnostics/: hardware_probe.py  hardware_self_check_node.py  localization_health_node.py  policy.py  sensor_watchdog_node.py
src/wheelchair_mapping/: CMakeLists.txt  README.md  package.xml
src/wheelchair_mapping/launch/: online_mapping.launch.py  save_map.launch.py
src/wheelchair_mapping/scripts/: map_postprocess.py  map_quality_check.py  vectorize_occupancy_map.py
src/wheelchair_navigation/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_navigation/config/: named_goals.yaml  semantic_map.yaml
src/wheelchair_navigation/test/: test_goal_manager.py  test_named_goal_store.py  test_reactive_explorer.py  test_semantic_keepout.py  test_semantic_keepout_node.py  test_semantic_map_store.py  test_startup_localization.py  test_startup_localization_node.py
src/wheelchair_navigation/wheelchair_navigation/: frontier_explorer_node.py  goal_manager_node.py  named_goal_store.py  navigation_status_node.py  reactive_explorer_node.py  semantic_keepout.py  semantic_keepout_node.py  semantic_map_store.py  startup_localization.py  startup_localization_node.py
src/wheelchair_safety/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_safety/test/: test_safety_supervisor.py
src/wheelchair_safety/wheelchair_safety/: emergency_stop_node.py  safety_supervisor_node.py  velocity_limiter_node.py
systemd/: 99-smartwheel-serial.rules  (+1 more)
(+61 files in other folders)
