<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_3d_mapping</name>
  <version>0.1.0</version>
  <description>
    LiDAR-Visual-Inertial-Wheel 3D SLAM integration layer for the autonomous
    wheelchair: dual XT-M60 point cloud fusion, an external FAST-LIVO2 / R3LIVE
    backend interface, wheel/LIVO consistency monitoring, 3D-to-2D occupancy
    projection for Nav2, and an optional RGB point cloud colorizer.
  </description>
  <maintainer email="todo@example.com">wheelchair team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Optional: used only by the bringup main-camera alias relay. The package
       still builds and the core nodes still run if topic_tools is absent. -->
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
