<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the indoor autonomous wheelchair stack.</description>
  <maintainer email="todo@example.com">wheelchair team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>wheelchair_3d_mapping</exec_depend>
  <exec_depend>wheelchair_description</exec_depend>
  <exec_depend>wheelchair_sensors</exec_depend>
  <exec_depend>wheelchair_perception</exec_depend>
  <exec_depend>wheelchair_diagnostics</exec_depend>
  <exec_depend>wheelchair_safety</exec_depend>
  <exec_depend>wheelchair_navigation</exec_depend>
  <exec_depend>wheelchair_base</exec_depend>
  <exec_depend>wheelchair_ui</exec_depend>
  <exec_depend>wheelchair_voice_agent</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
