<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_diagnostics</name>
  <version>0.1.0</version>
  <description>Hardware self-check, runtime watchdog and localization health for the wheelchair stack.</description>
  <maintainer email="todo@example.com">wheelchair team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>wheelchair_sensors</exec_depend>
  <exec_depend>wheelchair_base</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
