<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_safety</name>
  <version>0.1.0</version>
  <description>Safety supervisor, speed limiter, and emergency stop nodes.</description>
  <maintainer email="todo@example.com">wheelchair team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
